# rcalc

./: Cargo.toml  README.md
.github/workflows/: rust.yml
proptest-regressions/: main.txt
src/: lib.rs  main.rs
tests/: test_cli.proptest-regressions  test_cli.rs
