[package]
name = "rcalc"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.4.1"
chumsky = { version="1.0.0-alpha.7",features=["std", "spill-stack", "memoization", "extension", "label", "sync", "nightly"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
proptest = "1.4.0"
